# WeChatRoaming

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/icons/: icon.xml
app/src/androidTest/java/cn/martinkay/wechatroaming/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/misc/: version.c
app/src/main/cpp/utils/: AobScanUtils.h  ConfigManager.h  ElfScan.h  JniUtils.h  Log.h  MemoryBuffer.h  MemoryUtils.h  TextUtils.h  arch_utils.h
app/src/main/cpp/wechatroaming/: CMakeLists.txt
app/src/main/cpp/wechatroaming/wechatroaming/: Natives.cpp  Natives.h
app/src/main/cpp/wechatroaming_core/: NativeCoreBridge.cc  NativeCoreBridge.h  dexkit.cc
app/src/main/java/cn/martinkay/dexkit/: DexKitHelper.kt
app/src/main/java/cn/martinkay/wechatroaming/: MainActivity.java  XposedInit.java
app/src/main/java/cn/martinkay/wechatroaming/config/: ConfigManager.java  MmkvConfigManagerImpl.java  MultiProcessConfigManagerImpl.java  SafeModeManager.java
app/src/main/java/cn/martinkay/wechatroaming/settings/activity/: AppCompatTransferActivity.java  ConfigV2Activity.java  SettingsBaseActivity.java  SettingsUiFragmentHostActivity.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/base/: IDynamicHook.kt  ISwitchCellAgent.kt  ITraceableDynamicHook.kt  IUiItemAgent.kt  IUiItemAgentProvider.kt  RuntimeErrorTracer.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/bridge/: AppRuntimeHelper.java
app/src/main/java/cn/martinkay/wechatroaming/settings/core/: HookInstaller.java  InjectDelayableHooks.java  MainHook.java  NativeCoreBridge.java
app/src/main/java/cn/martinkay/wechatroaming/settings/dialog/: WsaWarningDialog.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/dsl/: FunctionEntryRouter.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/fragment/: AboutFragment.kt  BaseRootLayoutFragment.kt  BaseSettingFragment.java  CheckAbiVariantFragment.kt  CheckAbiVariantModel.java  ConfigEntrySearchHistoryManager.kt  EulaFragment.kt  HotUpdateConfigFragment.kt  SearchOverlaySubFragment.kt  SettingsMainFragment.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/hook/: AppCenterFix.java  BaseFunctionHook.kt  BasePlainUiAgentItem.kt  CommonSwitchFunctionHook.kt  EnableOnCreateSpiderWeb.kt  NullHook.java  ThemeSelectDialog.kt
app/src/main/java/cn/martinkay/wechatroaming/settings/lifecycle/: Parasitics.java
app/src/main/java/cn/martinkay/wechatroaming/settings/startup/: HookApplication.java  HookEntry.java  HybridClassLoader.java  StartupHook.java  StartupRoutine.java
app/src/main/java/cn/martinkay/wechatroaming/settings/step/: DexDeobfStep.java  Step.java
app/src/main/java/cn/martinkay/wechatroaming/settings/ui/: CommonContextWrapper.java  ModuleThemeManager.java  ResUtils.java
app/src/main/java/cn/martinkay/wechatroaming/utils/: CliOper.java  ComponentUtil.kt  EasterEggsForTheNonexistent.kt  HostInfo.java  HostInfo.kt  HostInfos.java  Initiator.java  IoUtils.java  JsonHelper.kt  LayoutHelper.java  LayoutHelperScope.kt  LicenseStatus.kt  Log.java  MainProcess.java  MultiprocessSharedPreferences.java  Natives.java  NonUiThread.java  Reflex.java  SavedInstanceStatePatchedClassReferencer.java  SyncUtils.java  SystemServiceUtils.kt  ToastUtil.java
app/src/main/java/cn/martinkay/wechatroaming/utils/data/: Licenses.kt  UserStatusConst.kt
app/src/main/java/cn/martinkay/wechatroaming/utils/dexkit/: DexDeobfsBackend.kt  DexDeobfsProvider.kt  DexFieldDescriptor.java  DexFlow.java  DexKit.kt  DexKitFilter.kt  DexKitFinder.kt  DexKitTarget.kt  DexMethodDescriptor.java
app/src/main/java/cn/martinkay/wechatroaming/utils/hookstatus/: AbiUtils.java  CloudSpieApp.java  HookStatus.java  HookStatusImpl.java  HookStatusInit.java  ModuleAppImpl.java
app/src/main/res/anim/: dialog_enter_anim.xml  dialog_exit_anim.xml
app/src/main/res/drawable/: drawable_round_edge.xml  fragment_index_3_stock_index_background.xml
app/src/main/res/layout/: activity_settings_ui_host.xml  fragment_abi_variant_info.xml
app/src/main/res/values/: arrays.xml  arrts.xml  colors.xml  ids.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/cn/martinkay/wechatroaming/: ExampleUnitTest.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: Common.kt  Version.kt  build-logic.android.base.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/dexkit/: build.gradle.kts
libs/ksp/src/main/kotlin/: Config.kt
libs/ksp/src/main/kotlin/cn/martinkay/processors/: FunctionHookEntryItemProcessor.kt  UiItemAgentEntryProcessor.kt
(+36 files in other folders)
